# ncurses-bazel

./: BUILD.bazel
info/: about.json  has_prefix  hash_input.json  index.json  paths.json
info/recipe/: build.sh  conda_build_config.yaml  meta.yaml  meta.yaml.template
